// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it goes in and out of edit mode 1`] = `
.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 3;
  background: rgba(0, 0, 0, 0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  font-size: 18px;
  font-size: 1rem;
  line-height: 24px;
}

.emotion-3[lang='zh'],
.emotion-3[lang='zh-Hans'],
.emotion-3[lang='zh-Hant'] {
  font-size: calc(18px * 1.11);
  font-size: calc(1rem * 1.11);
}

@media (min-width: 37.5625em) {
  .emotion-3 {
    font-size: 20px;
    font-size: 1.1111111111111112rem;
    line-height: 26px;
  }

  .emotion-3[lang='zh'],
  .emotion-3[lang='zh-Hans'],
  .emotion-3[lang='zh-Hant'] {
    font-size: calc(20px * 1.11);
    font-size: calc(1.1111111111111112rem * 1.11);
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 6px;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  width: 40px;
  height: 40px;
}

.emotion-5:hover,
.emotion-5:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-5[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-5[lang='zh'],
.emotion-5[lang='zh-Hans'],
.emotion-5[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-5:hover,
.emotion-5:active,
.emotion-5:focus-visible {
  color: #fff;
  background: #20588f;
  border-color: #20588f;
}

.emotion-5[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-5 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #d1372e;
  border: 2px solid #d1372e;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #d1372e;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  width: 40px;
  height: 40px;
}

.emotion-6:hover,
.emotion-6:focus-visible {
  color: #fff;
  background-color: #d1372e;
  border-color: #d1372e;
}

.emotion-6[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-6[lang='zh'],
.emotion-6[lang='zh-Hans'],
.emotion-6[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-6:hover,
.emotion-6:active,
.emotion-6:focus-visible {
  color: #fff;
  background: #d1372e;
  border-color: #d1372e;
}

.emotion-6[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-6 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

<div>
  <div
    aria-multiline="true"
    autocapitalize="false"
    autocorrect="false"
    contenteditable="true"
    data-slate-editor="true"
    data-slate-node="value"
    role="textbox"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <div
      data-slate-node="element"
      style="position: relative;"
    >
      <div
        data-slate-node="element"
        style="position: relative;"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-leaf="true"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    contenteditable="false"
  >
    <div
      class="emotion-0"
    />
    <div />
    <section
      class="c-related-articles"
      data-testid="relatedWrapper"
    >
      <div
        class="emotion-1 emotion-2"
      >
        <h3
          class="c-related-articles__component-title emotion-3"
        >
          Relatert innhold
        </h3>
        <div
          class="emotion-4"
        >
          <div
            data-tooltip="Rediger"
            data-tooltip-container="true"
          >
            <button
              aria-label="Rediger"
              class="emotion-5"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
          <div
            data-tooltip="Slett"
            data-tooltip-container="true"
          >
            <button
              aria-label="Slett"
              class="emotion-6"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c-related-articles__articles"
      />
    </section>
  </div>
</div>
`;

exports[`it goes in and out of edit mode 2`] = `
.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 3;
  background: rgba(0, 0, 0, 0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  font-size: 18px;
  font-size: 1rem;
  line-height: 24px;
}

.emotion-3[lang='zh'],
.emotion-3[lang='zh-Hans'],
.emotion-3[lang='zh-Hant'] {
  font-size: calc(18px * 1.11);
  font-size: calc(1rem * 1.11);
}

@media (min-width: 37.5625em) {
  .emotion-3 {
    font-size: 20px;
    font-size: 1.1111111111111112rem;
    line-height: 26px;
  }

  .emotion-3[lang='zh'],
  .emotion-3[lang='zh-Hans'],
  .emotion-3[lang='zh-Hant'] {
    font-size: calc(20px * 1.11);
    font-size: calc(1.1111111111111112rem * 1.11);
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 6px;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  width: 40px;
  height: 40px;
}

.emotion-5:hover,
.emotion-5:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-5[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-5[lang='zh'],
.emotion-5[lang='zh-Hans'],
.emotion-5[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-5:hover,
.emotion-5:active,
.emotion-5:focus-visible {
  color: #fff;
  background: #20588f;
  border-color: #20588f;
}

.emotion-5[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-5 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #d1372e;
  border: 2px solid #d1372e;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #d1372e;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  width: 40px;
  height: 40px;
}

.emotion-6:hover,
.emotion-6:focus-visible {
  color: #fff;
  background-color: #d1372e;
  border-color: #d1372e;
}

.emotion-6[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-6[lang='zh'],
.emotion-6[lang='zh-Hans'],
.emotion-6[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-6:hover,
.emotion-6:active,
.emotion-6:focus-visible {
  color: #fff;
  background: #d1372e;
  border-color: #d1372e;
}

.emotion-6[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-6 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

<div>
  <div
    aria-multiline="true"
    autocapitalize="false"
    autocorrect="false"
    contenteditable="true"
    data-slate-editor="true"
    data-slate-node="value"
    role="textbox"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <div
      data-slate-node="element"
      style="position: relative;"
    >
      <div
        data-slate-node="element"
        style="position: relative;"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-leaf="true"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    contenteditable="false"
  >
    <div
      class="emotion-0"
    />
    <div />
    <section
      class="c-related-articles"
      data-testid="relatedWrapper"
    >
      <div
        class="emotion-1 emotion-2"
      >
        <h3
          class="c-related-articles__component-title emotion-3"
        >
          Relatert innhold
        </h3>
        <div
          class="emotion-4"
        >
          <div
            data-tooltip="Rediger"
            data-tooltip-container="true"
          >
            <button
              aria-label="Rediger"
              class="emotion-5"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
          <div
            data-tooltip="Slett"
            data-tooltip-container="true"
          >
            <button
              aria-label="Slett"
              class="emotion-6"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c-related-articles__articles"
      >
        <article
          class="c-related-articles__item c-related-articles__item--external-learning-resources"
        >
          <h3
            class="c-related-articles__title"
          >
            <div
              class="c-content-type-badge c-content-type-badge--external-learning-resources c-content-type-badge--small c-content-type-badge--background c-content-type-badge--border"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g>
                      <g>
                        <polygon
                          points="0 0 24 0 24 24 0 24"
                        />
                        <path
                          d="M3.9,12 C3.9,10.29 5.29,8.9 7,8.9 L11,8.9 L11,7 L7,7 C4.24,7 2,9.24 2,12 C2,14.76 4.24,17 7,17 L11,17 L11,15.1 L7,15.1 C5.29,15.1 3.9,13.71 3.9,12 Z M8,13 L16,13 L16,11 L8,11 L8,13 Z M17,7 L13,7 L13,8.9 L17,8.9 C18.71,8.9 20.1,10.29 20.1,12 C20.1,13.71 18.71,15.1 17,15.1 L13,15.1 L13,17 L17,17 C19.76,17 22,14.76 22,12 C22,9.24 19.76,7 17,7 Z"
                          fill="currentColor"
                          fill-rule="nonzero"
                        />
                      </g>
                    </g>
                  </g>
                </g>
              </svg>
            </div>
            <span
              class="c-related-articles__link-wrapper"
            >
              <a
                class="c-related-articles__link"
                href="https://www.vg.no"
                rel="noopener noreferrer"
                target="_blank"
              >
                Verdens gang
              </a>
            </span>
          </h3>
          <p
            class="c-related-articles__description"
          />
          <p
            class="c-related-articles__link-info"
          >
            Nettside hos vg.no
          </p>
        </article>
      </div>
    </section>
  </div>
</div>
`;
